@@ -436,6 +436,11 @@ table tr th:last-child, table tr td:last-child {
 .offset1 { margin-left: 8%; }
 .page-header .container { clear: both; }
 .page-header h1 { margin: 9px 0; }
+.page-status {
+   color: transparent; bottom: 0; font-weight: bold; font-size: 14px;
+   padding: 9px; position: fixed; right: 18px; z-index: 10;
+}
+.page-status:hover { color: @contrast; }
 .pathname, .standard-field {
    border: 2px inset; .border-radius; .box-sizing; font-size: 15px;
    line-height: 18px; margin: 4px 0; min-width: 400px; padding: 3px 7px;
